[TASK-2] Update (was done in TASK-1): All interactive elements should be accessible via keyboard: Except places where JS code is needed;

--- a/index.html
+++ b/index.html
@@ -261,19 +261,19 @@
       <nav class="tabs is-boxed is-centered main-menu" id="nav" role="navigation">
         <ul>
           <li data-target="pane-1" id="1" class="is-active">
-            <a href="#" aria-current="page" class="link">
+            <a href="" aria-current="page" class="link">
               <span class="icon is-small"><i class="fa fa-image"></i></span>
               <span>Pictures</span>
             </a>
           </li>
           <li data-target="pane-3" id="3">
-            <a href="#" aria-current="page" class="link">
+            <a href="" aria-current="page" class="link">
               <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
               <span>Team</span>
             </a>
           </li>
           <li data-target="pane-4" id="4">
-            <a href="#" aria-current="page" class="link">
+            <a href="" aria-current="page" class="link">
               <span class="icon is-small"><i class="fa fa-film"></i></span>
               <span>Video</span>
             </a>
