[TASK-2] Feature: Create ‘skip navigation link’.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header class="hero hero-bg is-fullheight">
+    <a href="#about" aria-current="page" class="link skip-link ">Skip to the main content</a>
     <div class="hero-head">
       <div class="navbar">
         <div class="container">
