[TASK-2] Fix: Use tag  <form> as appropriate. if there are such places on the page.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="subtitle has-text-white">
             Would you like to get the latest news?
           </div>
-          <div class="box">
+          <form class="box">
             <div class="field is-grouped">
               <p class="control is-expanded">
                 <input class="input">
@@ -83,7 +83,7 @@
                 <button class="button is-info">Notify Me</button>
               </p>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </div>
