[TASK-2] Fix: Use valid markup for table data representation: if there are such places on the page.

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <p>Maecenas eleifend sollicitudin dui, faucibus sollicitudin augue cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est maximus est porta condimentum in eu justo. Nulla id iaculis sapien.</p>
         <table>
           <tr>
-            <td>Header</td>
-            <td>Header</td>
+            <th scope="col" id="header1">Header</th>
+            <th scope="col" id="header2">Header</th>
           </tr>
           <tr>
             <td>cell</td>
