--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <form class="box">
             <div class="field is-grouped">
               <p class="control is-expanded">
-                <input class="input">
+                <label class="label visually-hidden" for="notifyInput">Notify me</label>
+                <input class="input" id="notifyInput">
               </p>
               <p class="control">
                 <button class="button is-info">Notify Me</button>
@@ -907,16 +908,16 @@
 
         <form class="column is-half is-offset-one-quarter box">
           <div class="field">
-            <label class="label">Name</label>
+            <label class="label" for="nameInput">Name</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Text input">
+              <input class="input" type="text" placeholder="Text input" id="nameInput">
             </div>
           </div>
 
           <div class="field">
-            <label class="label">Username</label>
+            <label class="label" for="usernameInput">Username</label>
             <div class="control has-icons-left has-icons-right">
-              <input class="input is-success" type="text">
+              <input class="input is-success" type="text" id="usernameInput">
               <span class="icon is-small is-left">
                 <i class="fas fa-user"></i>
               </span>
@@ -928,9 +929,9 @@
           </div>
 
           <div class="field">
-            <label class="label">Email</label>
+            <label class="label" for="emailInput">Email</label>
             <div class="control has-icons-left has-icons-right">
-              <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+              <input class="input is-danger" type="email" placeholder="Email input" value="hello@" id="emailInput">
               <span class="icon is-small is-left">
                 <i class="fas fa-envelope"></i>
               </span>
@@ -954,9 +955,9 @@
           </div>
 
           <div class="field">
-            <label class="label">Message</label>
+            <label class="label" for="textareaInput">Message</label>
             <div class="control">
-              <textarea class="textarea" placeholder="Textarea"></textarea>
+              <textarea class="textarea" placeholder="Textarea" id="textareaInput"></textarea>
             </div>
           </div>
 
@@ -1145,10 +1146,22 @@
 
       <div class="content has-text-centered">
         <div class="soc">
-          <a href="#" aria-current="page" class="link"><i class="fab fa-github-alt fa-2x"></i></a>
-          <a href="#" aria-current="page" class="link"><i class="fab fa-youtube fa-2x"></i></a>
-          <a href="#" aria-current="page" class="link"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#" aria-current="page" class="link"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" aria-current="page" class="link">
+            <i class="fab fa-github-alt fa-2x"></i>
+            <span class="visually-hidden">Github</span>
+          </a>
+          <a href="#" aria-current="page" class="link">
+            <i class="fab fa-youtube fa-2x"></i>
+            <span class="visually-hidden">Youtube</span>
+          </a>
+          <a href="#" aria-current="page" class="link">
+            <i class="fab fa-facebook fa-2x"></i>
+            <span class="visually-hidden">Facebook</span>
+          </a>
+          <a href="#" aria-current="page" class="link">
+            <i class="fab fa-twitter fa-2x"></i>
+            <span class="visually-hidden">Twitter</span>
+          </a>
         </div>
         <p>The source code is licensed <a href="http://opensource.org/licenses/mit-license.php" target="_blank" class="link">MIT</a><sup><i class="fas fa-external-link-alt"></i></sup>.</p>
       </div>
@@ -1190,7 +1203,7 @@
         </div>
       </div>
     </div>
-    <button class="modal-close is-large"></button>
+    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
   </div>
 
   <div id="modal-image1" class="modal modal-fx-3dSlit">
@@ -1198,7 +1211,7 @@
     <div class="modal-content is-huge is-image">
       <img src="https://source.unsplash.com/random/?sig=1" alt="">
     </div>
-    <button class="modal-close is-large"></button>
+    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
   </div>
 
   <div id="modal-image2" class="modal modal-fx-superScaled">
@@ -1206,7 +1219,7 @@
     <div class="modal-content  is-image">
       <img src="https://source.unsplash.com/random/?sig=3" alt="">
     </div>
-    <button class="modal-close is-large"></button>
+    <button class="modal-close is-large"><span class="visually-hidden">Close button</span></button>
   </div>
 
   <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
