--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 
 <body>
   <header class="hero hero-bg is-fullheight">
-    <a href="#about" aria-current="page" class="link skip-link ">Skip to the main content</a>
+    <div class="skip-container">
+      <button class="button skip-button" id="skipLink">Skip to:</button>
+      <nav class="skip-navigation" id="skipButtonMenu">
+        <ul>
+          <li><a href="#about" class="link" aria-current="page">About us</a></li>
+          <li><a href="#features" class="link" aria-current="page">Key features</a></li>
+          <li><a href="#events" class="link" aria-current="page">Upcoming events</a></li>
+          <li><a href="#services" class="link" aria-current="page">Services</a></li>
+          <li><a href="#photos" class="link" aria-current="page">Photos</a></li>
+          <li><a href="#forum" class="link" aria-current="page">Forum</a></li>
+          <li><a href="#contactUs" class="link" aria-current="page">Contact us</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero-head">
       <div class="navbar">
         <div class="container">
