fixed the contrast issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Accessibility 2019 Q1 BY</title>
   <link rel='stylesheet prefetch' href='https://use.fontawesome.com/releases/v5.0.10/css/all.css'>
-  <link rel="stylesheet prefetch" href="css/styles.css">
+  <link rel="stylesheet prefetch" href="dist/styles.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <a class="navbar-item logo-link">
               <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
             </a>
-            <span class="navbar-burger burger" data-target="navbarMenu">
+            <span class="navbar-burger burger is-white" data-target="navbarMenu">
               <span></span>
               <span></span>
               <span></span>
@@ -182,9 +182,9 @@
       <div class="is-5 title">Fifth level</div>
       <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
       <figure>
-        <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg">
-        <img src="./img/photo-1574281852611-b2f04c86a520.jpg">
-        <img src="./img/photo-1575023615386-1554d895d09d.jpg">
+        <img src="img/photo-1572958731731-2b7fdb0a9818.jpg">
+        <img src="img/photo-1574281852611-b2f04c86a520.jpg">
+        <img src="img/photo-1575023615386-1554d895d09d.jpg">
         <figcaption>
           Figure 1: Some beautiful placeholders
         </figcaption>
@@ -290,7 +290,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1">
+                  <img src="img/tab-1.jpg" class="modal-button" data-target="modal-image1">
                 </div>
               </div>
               <div class="card-content">
@@ -306,7 +306,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-2.jpg">
+                  <img src="img/tab-2.jpg">
                 </div>
               </div>
               <div class="card-content">
@@ -323,7 +323,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2">
+                  <img src="img/tab-3.jpg" class="modal-button" data-target="modal-image2">
                 </div>
               </div>
               <div class="card-content">
@@ -423,7 +423,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/web-access-summit-eventbrite.jpg">
+              <img src="img/web-access-summit-eventbrite.jpg">
             </div>
             <p class="title">New York</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -433,7 +433,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg">
+              <img src="img/access.jpg">
             </div>
             <p class="title">Los Angeles</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -443,7 +443,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/dotcss-2019.jpg">
+              <img src="img/dotcss-2019.jpg">
             </div>
             <p class="title">Mexico</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -456,7 +456,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/images.jpg">
+              <img src="img/images.jpg">
             </div>
             <p class="title">Paris</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -466,7 +466,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
+              <img src="img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
             </div>
             <p class="title">Minsk</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -476,7 +476,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="./img/access.jpg">
+              <img src="img/access.jpg">
             </div>
             <p class="title">London</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -559,7 +559,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-1.jpeg">
+                  <img src="img/ev-1.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -584,7 +584,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-2.jpeg">
+                  <img src="img/ev-2.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -609,7 +609,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-3.jpeg">
+                  <img src="img/ev-3.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -636,7 +636,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-4.jpeg">
+                  <img src="img/ev-4.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -661,7 +661,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-5.jpeg">
+                  <img src="img/ev-5.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -686,7 +686,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="./img/ev-6.jpeg">
+                  <img src="img/ev-6.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -742,7 +742,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 1</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 1</span>
                 </div>
               </div>
             </div>
@@ -764,7 +764,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 0</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 0</span>
                 </div>
               </div>
             </div>
@@ -786,7 +786,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 13</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 13</span>
                 </div>
               </div>
             </div>
@@ -808,7 +808,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -830,7 +830,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -852,7 +852,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey-dark"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -1173,6 +1173,6 @@
   </div>
 
   <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
-  <script async src="js/custom.js"></script>
+  <script async src="dist/custom.js"></script>
 </body>
 </html>
