added alt to images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="navbar-brand">
             <a class="navbar-item logo-link">
-              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
+              <img alt="EPAM company logo" src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
             </a>
             <span class="navbar-burger burger is-white" data-target="navbarMenu">
               <span></span>
@@ -182,9 +182,9 @@
       <div class="is-5 title">Fifth level</div>
       <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
       <figure>
-        <img src="img/photo-1572958731731-2b7fdb0a9818.jpg">
-        <img src="img/photo-1574281852611-b2f04c86a520.jpg">
-        <img src="img/photo-1575023615386-1554d895d09d.jpg">
+        <img alt="fir forest as seen from the train window" src="img/photo-1572958731731-2b7fdb0a9818.jpg">
+        <img alt="woman of color with crossed hands in lots of jewelery" src="img/photo-1574281852611-b2f04c86a520.jpg">
+        <img alt="New Year decorations and presents" src="img/photo-1575023615386-1554d895d09d.jpg">
         <figcaption>
           Figure 1: Some beautiful placeholders
         </figcaption>
@@ -290,7 +290,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="img/tab-1.jpg" class="modal-button" data-target="modal-image1">
+                  <img alt="person playing a portable game" src="img/tab-1.jpg" class="modal-button" data-target="modal-image1">
                 </div>
               </div>
               <div class="card-content">
@@ -306,7 +306,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="img/tab-2.jpg">
+                  <img alt="a tropical beach viewed from above" src="img/tab-2.jpg">
                 </div>
               </div>
               <div class="card-content">
@@ -323,7 +323,7 @@
             <div class="card">
               <div class="card-image">
                 <div class="image is-4by3">
-                  <img src="img/tab-3.jpg" class="modal-button" data-target="modal-image2">
+                  <img alt="a black beach on an early morning, a faint rainbow can be seen" src="img/tab-3.jpg" class="modal-button" data-target="modal-image2">
                 </div>
               </div>
               <div class="card-content">
@@ -423,7 +423,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/web-access-summit-eventbrite.jpg">
+              <img alt="Web Accessibility Summit logo" src="img/web-access-summit-eventbrite.jpg">
             </div>
             <p class="title">New York</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -433,7 +433,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/access.jpg">
+              <img alt="people with disabilities participating in a conference" src="img/access.jpg">
             </div>
             <p class="title">Los Angeles</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -443,7 +443,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/dotcss-2019.jpg">
+              <img alt="dot css company logo" src="img/dotcss-2019.jpg">
             </div>
             <p class="title">Mexico</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -456,7 +456,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/images.jpg">
+              <img alt="access a11y our input our independence logo" src="img/images.jpg">
             </div>
             <p class="title">Paris</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -466,7 +466,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
+              <img alt="css minsk js logo" src="img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
             </div>
             <p class="title">Minsk</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -476,7 +476,7 @@
         <div class="tile is-parent">
           <div class="tile is-child box">
             <div class="image">
-              <img src="img/access.jpg">
+              <img alt="people with disabilities participating in a conference" src="img/access.jpg">
             </div>
             <p class="title">London</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
@@ -559,7 +559,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-1.jpeg">
+                  <img alt="JSConf Family conference: a speaker performing" src="img/ev-1.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -584,7 +584,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-2.jpeg">
+                  <img alt="people working on their laptops" src="img/ev-2.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -609,7 +609,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-3.jpeg">
+                  <img alt="a person shooting a concert video on their phone" src="img/ev-3.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -636,7 +636,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-4.jpeg">
+                  <img alt="conference speakers on the stage" src="img/ev-4.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -661,7 +661,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-5.jpeg">
+                  <img alt="choose the appropriate technology: key 05" src="img/ev-5.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -686,7 +686,7 @@
               </div>
               <div class="card-content">
                 <div class="image">
-                  <img src="img/ev-6.jpeg">
+                  <img alt="audience at the conference, the venue is full" src="img/ev-6.jpeg">
                 </div>
               </div>
               <div class="card-footer">
@@ -697,7 +697,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </div>
 
@@ -730,7 +729,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=300">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=300">
                   </p>
                 </div>
                 <div class="media-content">
@@ -752,7 +751,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=301">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=301">
                   </p>
                 </div>
                 <div class="media-content">
@@ -774,7 +773,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=302">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=302">
                   </p>
                 </div>
                 <div class="media-content">
@@ -796,7 +795,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=303">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=303">
                   </p>
                 </div>
                 <div class="media-content">
@@ -818,7 +817,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=304">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=304">
                   </p>
                 </div>
                 <div class="media-content">
@@ -840,7 +839,7 @@
               <div class="media">
                 <div class="media-left">
                   <p class="image is-32x32">
-                    <img src="https://source.unsplash.com/random/64x64/?sig=305">
+                    <img alt="" src="https://source.unsplash.com/random/64x64/?sig=305">
                   </p>
                 </div>
                 <div class="media-content">
