added visually-hidden class for the link

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,11 @@
           <a><i class="fab fa-facebook fa-2x"></i></a>
           <a><i class="fab fa-twitter fa-2x"></i></a>
         </div>
-        <p>The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p>
+        <p>The source code is licensed
+          <a href="http://opensource.org/licenses/mit-license.php">MIT
+            <span class="visually-hidden">, opens in a new window</span>
+          </a>
+        </p>
       </div>
     </div>
   </div>
