added ARIA landmarks

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </span>
           </div>
 
-          <div id="navbarMenu" class="navbar-menu">
+          <div role="navigation" id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
               <span class="navbar-item">
                 <a class="button is-white is-outlined">
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <div class="hero-body">
+    <div role="main" class="hero-body">
       <div class="container has-text-centered">
         <div class="column is-6 is-offset-3">
           <h1 class="title has-text-white">We have web accessibility in mind</h1>
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <div class="section" id="about">
+  <div role="contentinfo" class="section" id="about">
     <div class="section-heading has-text-centered">
       <h2 class="title is-2">About Us</h2>
       <h5 class="subtitle is-5">We of all trades, master of "some"</h5>
@@ -194,7 +194,7 @@
     </div>
   </div>
 
-  <div class="hero has-background-grey-light">
+  <div role="list" class="hero has-background-grey-light">
     <div class="container features">
       <div class="section-heading has-text-centered">
         <h2 class="title is-2">Three key features</h2>
@@ -251,7 +251,7 @@
     </div>
   </div>
 
-  <div class="hero is-info">
+  <div role="list" class="hero is-info">
     <div class="hero-body">
       <div class="container">
         <h1 class="title">List of topics</h1>
@@ -413,7 +413,7 @@
   </div>
 
 
-  <div class="has-background-grey-lighter">
+  <div role="main" class="has-background-grey-lighter">
     <div class="container has-text-centered">
         <div class="section-heading has-text-centered">
           <h2 class="title is-2">Upcoming events</h2>
@@ -967,7 +967,7 @@
               <span class="icon">
                 <i class="has-text-warning fas fa-columns fa-lg"></i>
               </span>
-            </div>
+            </div>N
             <div class="media-content">
               <div class="content">
                 <div class="title is-size-4">Columns</div>
