--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       </section>
 
       <section class="tab-content container">
-        <div class="tab-pane is-active" id="pane-1" class="level">
+        <div class="tab-pane is-active level" id="pane-1" >
           <div class="container">
             <div class="columns features">
               <div class="column is-4">
@@ -675,7 +675,7 @@
             <div class="tile is-parent">
               <div class="tile is-child box">
                 <div class="image">
-                  <img src="./img/access.jpg" />
+                  <img src="./img/access.jpg"  alt=""/>
                 </div>
                 <p class="title">London</p>
                 <p class="subtitle">Fri 27 Nov 2016</p>
@@ -1119,16 +1119,16 @@
 
           <form class="column is-half is-offset-one-quarter box">
             <div class="field">
-              <label class="label">Name</label>
+              <label for="name" class="label">Name</label>
               <div class="control">
-                <input class="input" type="text" placeholder="Text input" />
+                <input class="input" type="text" placeholder="Text input" id="name"/>
               </div>
             </div>
 
             <div class="field">
-              <label class="label">Username</label>
+              <label for="user-name" class="label">Username</label>
               <div class="control has-icons-left has-icons-right">
-                <input class="input is-success" type="text" />
+                <input class="input is-success" type="text" id="user-name"/>
                 <span class="icon is-small is-left">
                   <i class="fas fa-user"></i>
                 </span>
@@ -1140,9 +1140,10 @@
             </div>
 
             <div class="field">
-              <label class="label">Email</label>
+              <label for="email" class="label">Email</label>
               <div class="control has-icons-left has-icons-right">
                 <input
+                  id="email"
                   class="input is-danger"
                   type="email"
                   placeholder="Email input"
@@ -1159,10 +1160,10 @@
             </div>
 
             <div class="field">
-              <label class="label">Subject</label>
+              <label for="subject" class="label">Subject</label>
               <div class="control">
                 <div class="select">
-                  <select>
+                  <select id="subject">
                     <option>Select dropdown</option>
                     <option>With options</option>
                   </select>
@@ -1171,9 +1172,9 @@
             </div>
 
             <div class="field">
-              <label class="label">Message</label>
+              <label for="message" class="label">Message</label>
               <div class="control">
-                <textarea class="textarea" placeholder="Textarea"></textarea>
+                <textarea id="message" class="textarea" placeholder="Textarea"></textarea>
               </div>
             </div>
 
