--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
 
             <fieldset class="box field is-grouped">
               <label class="control is-expanded">
-                <span class="visually-hidden"
-                  >Would you like to get the latest news?</span
-                >
+                <span class="visually-hidden"></span>
                 <input class="input" type="text" />
               </label>
 
@@ -135,13 +133,13 @@
         <div class="content container">
           <h1 class="is-1 title">Hello World</h1>
           <p>
-            Lorem ipsum<sup
-              ><a href="#" target="_blank" class="outlined-link"
+            Lorem ipsum<sup>
+              <a href="#" target="_blank" class="outlined-link external-link"
                 >[1]<span class="visually-hidden"
                   >will open in a new tab</span
                 ></a
-              ></sup
-            >
+              >
+            </sup>
             dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus
             ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum
             justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio,
@@ -170,9 +168,12 @@
           <div class="is-3 title">Third level</div>
           <p>
             Quisque ante lacus, malesuada ac auctor vitae, congue
-            <a href="#" class="outlined-link">non ante</a>. Phasellus lacus ex,
-            semper ac tortor nec, fringilla condimentum orci. Fusce eu rutrum
-            tellus.
+            <a href="#" target="_blank" class="outlined-link external-link">
+              non ante<span class="visually-hidden"
+                >will open in a new tab</span
+              ></a
+            >. Phasellus lacus ex, semper ac tortor nec, fringilla condimentum
+            orci. Fusce eu rutrum tellus.
           </p>
           <ol class="ol-list">
             <li>Donec blandit a lorem id convallis.</li>
@@ -596,7 +597,6 @@
               <div class="embed-container image">
                 <iframe
                   src="https://player.vimeo.com/video/261794608"
-                  frameborder="0"
                   webkitAllowFullScreen
                   mozallowfullscreen
                   allowfullscreen
