hw2 redone skip to main menu

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   </head>
 
   <body>
+    <a class="button is-white is-outlined visually-hidden accessibility-cta" href="#main">
+      <span class="icon">
+        <i class="fa fa-home"></i>
+      </span>
+      <span>Skip to main content</span>
+    </a>
     <header class="hero hero-bg is-fullheight">
       <div class="hero-head">
         <nav class="navbar">
@@ -40,17 +46,6 @@
 
             <div id="navbarMenu" class="navbar-menu">
               <div class="navbar-end">
-                <span class="navbar-item">
-                  <a
-                    class="button is-white is-outlined visually-hidden"
-                    href="#"
-                  >
-                    <span class="icon">
-                      <i class="fa fa-home"></i>
-                    </span>
-                    <span>Skip to main content</span>
-                  </a>
-                </span>
                 <span class="navbar-item">
                   <a class="button is-white is-outlined" href="#">
                     <span class="icon">
