hw2 add form group for radio buttons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   </head>
 
   <body>
-    <a class="button is-white is-outlined visually-hidden accessibility-cta" href="#main">
+    <a
+      class="button is-white is-outlined visually-hidden accessibility-cta"
+      href="#main"
+    >
       <span class="icon">
         <i class="fa fa-home"></i>
       </span>
@@ -1202,7 +1205,8 @@
               </div>
             </div>
 
-            <div class="field">
+            <fieldset class="field">
+              <legend class="visually-hidden">Subscribe to newsletter?</legend>
               <div class="control">
                 <label class="radio">
                   <input type="radio" name="question" />
@@ -1213,7 +1217,7 @@
                   No
                 </label>
               </div>
-            </div>
+            </fieldset>
 
             <div class="field is-grouped">
               <div class="control">
